--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "dependencies": {
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.2.0",
-        "node-sass": "^7.0.1"
+        "jquery": "^3.6.0"
     }
 }
